--- a/arcade.css
+++ b/arcade.css
@@ -185,9 +185,8 @@ a {
   color: rgba(0, 0, 0, 0.99);
   border-bottom: 1px dotted rgba(0, 0, 0, 0.99);
   font-weight: 500;
-  filter: brightness(150%);
 }
-a:hover {
+a:hover:not(.button), {
   border-bottom-style: solid;
   opacity: 0.7;
 }
